--- a/index.html
+++ b/index.html
@@ -384,15 +384,17 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 20px;
+            box-shadow: 0 18px 40px var(--shadow-elevated);
         }
 
         .center-panel {
-            background: var(--surface-soft);
+            background: var(--surface-strong);
             border-radius: 10px;
             padding: 20px;
             overflow-y: auto;
             position: relative;
             height: 100%;
+            box-shadow: 0 18px 40px var(--shadow-elevated);
         }
 
         /* Custom scrollbar for center panel */
@@ -593,7 +595,7 @@
         /* Galaxy Grid Styles */
         .galaxy-grid {
             overflow: auto;
-            background: var(--surface-inverse);
+            /* background: var(--surface-inverse); */
             border: 1px solid var(--border-color);
             padding: 20px;
         }
@@ -762,6 +764,7 @@
 
         .planet-cell {
             min-height: 120px;
+            margin: 10px;
         }
 
         .planet-card {
