--- a/index.html
+++ b/index.html
@@ -594,8 +594,9 @@
         /* Galaxy Grid Styles */
         .galaxy-grid {
             overflow: auto;
-            /* background: var(--surface-inverse); */
+            background: var(--surface-strong);
             border: 1px solid var(--border-color);
+            border-radius: 12px;
             padding: 20px;
         }
 
@@ -632,8 +633,9 @@
             min-height: 120px;
             min-width: 200px;
             border: 1px solid var(--border-color);
-            border-radius: 8px;
-            background: var(--surface-soft);
+            border-radius: 10px;
+            background: var(--surface-medium);
+            color: var(--text-color);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -642,22 +644,25 @@
             transition: all 0.3s ease;
             padding: 15px;
             cursor: pointer;
+            box-shadow: 0 6px 12px 0 var(--shadow-elevated);
         }
 
         .solar-system-cell.explored {
-            background: var(--success-soft);
+            background: var(--surface-soft);
             border: 2px solid var(--accent-success);
+            color: var(--surface-inverse);
         }
 
         .solar-system-cell.discovered {
-            background: var(--success-soft-weak);
+            background: var(--neutral-soft);
             border: 1px solid var(--accent-success-shadow);
-            opacity: 0.7;
+            color: var(--text-color);
         }
 
         .solar-system-cell.hidden {
             background: var(--hidden-surface);
             border: 1px solid var(--hidden-border);
+            color: var(--text-muted);
         }
 
         .system-header h4 {
@@ -694,23 +699,25 @@
             margin: 0;
             font-size: 10px;
             font-weight: bold;
-            padding: 2px 6px;
-            border-radius: 3px;
+            padding: 2px 8px;
+            border-radius: 999px;
+            background: var(--surface-strong);
+            color: var(--text-strong);
         }
 
         .system-status.explored {
-            background: var(--success-soft);
-            color: var(--accent-success);
+            background: var(--accent-success);
+            color: var(--surface-inverse);
         }
 
         .system-status.discovered {
-            background: var(--warning-soft);
-            color: var(--accent-warning);
+            background: var(--accent-warning);
+            color: var(--surface-inverse);
         }
 
         .system-status.hidden {
-            background: var(--neutral-soft);
-            color: var(--text-muted);
+            background: var(--neutral-strong);
+            color: var(--surface-inverse);
         }
 
 
@@ -1975,16 +1982,19 @@
         }
 
         .resource-card {
-            background: var(--surface-soft);
+            background: var(--surface-medium);
             border: 1px solid var(--border-color);
             border-radius: 8px;
             padding: 10px;
             transition: all 0.3s ease;
+            color: var(--text-color);
         }
 
         .resource-card.at-capacity {
-            border: 2px solid var(--accent-danger);
-            background: var(--danger-soft-weak);
+            border: 2px solid var(--accent-warning);
+            background: var(--surface-inverse);
+            color: var(--button-on-accent);
+            box-shadow: 0 0 16px var(--warning-glow);
         }
 
         .resource-header {
@@ -2000,9 +2010,13 @@
             color: var(--text-color);
         }
 
+        .resource-card.at-capacity .resource-header h4 {
+            color: var(--button-on-accent);
+        }
+
         .capacity-warning {
-            background: var(--accent-danger);
-            color: var(--text-color);
+            background: var(--accent-warning);
+            color: var(--surface-inverse);
             padding: 2px 6px;
             border-radius: 3px;
             font-size: 0.7em;
@@ -2012,8 +2026,16 @@
         .resource-amount {
             font-size: 1.1em;
             font-weight: bold;
-            color: var(--accent-success);
+            color: var(--accent-info);
             margin-bottom: 8px;
+        }
+
+        .resource-card.at-capacity .resource-amount {
+            color: var(--accent-warning);
+        }
+
+        .resource-card.at-capacity .resource-generation {
+            color: var(--accent-info);
         }
 
         .resource-capacity-bar {
