Enhance styling for speed card statistics to improve visual distinction

--- a/index.html
+++ b/index.html
@@ -1301,6 +1301,10 @@
             color: var(--accent-prestige);
         }
 
+        .stat-item.speed-card .stat-value {
+            color: var(--accent-success);
+        }
+
         .stat-item.status-card .stat-value {
             color: var(--accent-info);
         }
