Update disabled button styles for better visibility and accessibility

--- a/index.html
+++ b/index.html
@@ -1718,8 +1718,9 @@
         }
 
         .transport-btn:disabled {
-            background: var(--button-disabled-bg);
-            color: var(--text-disabled);
+            background: var(--warning-soft-weak);
+            color: var(--accent-warning);
+            border: 1px solid var(--accent-warning);
             cursor: not-allowed;
         }
 
