--- a/index.html
+++ b/index.html
@@ -940,8 +940,20 @@
 
         .planet-info-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(4, minmax(0, 1fr));
             gap: 20px;
+        }
+
+        @media (max-width: 1200px) {
+            .planet-info-grid {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+        }
+
+        @media (max-width: 700px) {
+            .planet-info-grid {
+                grid-template-columns: 1fr;
+            }
         }
 
         .info-section {
