--- a/index.html
+++ b/index.html
@@ -2236,6 +2236,10 @@
             font-weight: bold;
         }
 
+        .planet-name-display {
+            cursor: pointer;
+        }
+
         @media (max-width: 768px) {
             .game-layout {
                 grid-template-columns: 1fr;
