--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
             --planet-color-toxic: var(--orbit-04);
             --planet-color-crystalline: var(--orbit-05);
             --planet-color-metallic: var(--orbit-02);
+
+            /* Typography scale */
+            --font-size-small: 0.875rem; /* 14px */
+            --font-size-medium: 1rem; /* 16px */
+            --font-size-large: 1.5rem; /* 24px */
         }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -135,7 +140,7 @@
         }
 
         h1 {
-            font-size: 2rem;
+            font-size: var(--font-size-large);
             margin: 0;
             color: var(--text-strong);
             text-shadow: 0 8px 24px var(--heading-shadow);
@@ -143,7 +148,7 @@
 
         .header-subtitle {
             margin: 0;
-            font-size: 0.85rem;
+            font-size: var(--font-size-small);
             letter-spacing: 0.06em;
             text-transform: uppercase;
             color: var(--text-muted);
@@ -163,14 +168,6 @@
             flex-direction: column;
             gap: 10px;
             min-width: 160px;
-        }
-
-        .control-label {
-            font-size: 0.7rem;
-            letter-spacing: 0.08em;
-            text-transform: uppercase;
-            font-weight: 600;
-            color: var(--text-muted);
         }
 
         .save-load-controls {
@@ -193,7 +190,7 @@
             border: none;
             border-radius: 12px;
             cursor: pointer;
-            font-size: 0.85rem;
+            font-size: var(--font-size-small);
             font-weight: 600;
             transition: background 0.3s ease, color 0.3s ease, transform 0.2s ease;
         }
@@ -210,7 +207,7 @@
             background: var(--accent-danger);
             color: var(--button-on-danger);
             font-weight: 600;
-            font-size: 0.85rem;
+            font-size: var(--font-size-small);
             box-shadow: 0 0 0 2px var(--danger-soft);
             transition: background 0.3s ease, color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
         }
@@ -242,12 +239,12 @@
             color: var(--button-text);
             cursor: pointer;
             transition: all 0.3s ease;
-            font-size: 16px;
+            font-size: var(--font-size-medium);
         }
 
         .control-btn {
             padding: 8px 14px;
-            font-size: 0.9rem;
+            font-size: var(--font-size-small);
             font-weight: 600;
             border-radius: 12px;
             background: linear-gradient(135deg, var(--button-bg) 0%, var(--surface-soft) 100%);
@@ -352,7 +349,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: var(--font-size-small);
             transition: background 0.3s ease;
         }
 
@@ -413,44 +410,44 @@
         /* Header and Footer Font Size Reductions */
         .header-panel h2,
         .header-panel h3 {
-            font-size: 14px;
+            font-size: var(--font-size-small);
             margin: 0 0 5px 0;
         }
 
         .header-panel p {
-            font-size: 11px;
+            font-size: var(--font-size-small);
             margin: 2px 0;
         }
 
         .header-panel ul {
-            font-size: 10px;
+            font-size: var(--font-size-small);
         }
 
         .header-panel li {
             margin: 3px 0;
             padding: 5px;
-            font-size: 10px;
+            font-size: var(--font-size-small);
         }
 
         .footer-panel h2,
         .footer-panel h3 {
-            font-size: 14px;
+            font-size: var(--font-size-small);
             margin: 0 0 5px 0;
         }
 
         .footer-panel p {
-            font-size: 11px;
+            font-size: var(--font-size-small);
             margin: 2px 0;
         }
 
         .footer-panel ul {
-            font-size: 10px;
+            font-size: var(--font-size-small);
         }
 
         .footer-panel li {
             margin: 3px 0;
             padding: 5px;
-            font-size: 10px;
+            font-size: var(--font-size-small);
         }
 
         .no-planet-selected {
@@ -462,12 +459,12 @@
         .no-planet-selected h3 {
             margin: 0 0 10px 0;
             color: var(--text-strong);
-            font-size: 16px;
+            font-size: var(--font-size-medium);
         }
 
         .no-planet-selected p {
             margin: 0;
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .game-info {
@@ -493,7 +490,7 @@
         .game-stats p,
         .empire-resources p {
             margin: 10px 0;
-            font-size: 16px;
+            font-size: var(--font-size-medium);
         }
 
         ul {
@@ -544,7 +541,7 @@
 
         .no-systems p {
             margin: 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .solar-system-cell {
@@ -585,7 +582,7 @@
 
         .system-header h4 {
             margin: 0 0 8px 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
             color: var(--accent-success);
             font-weight: bold;
         }
@@ -602,7 +599,7 @@
 
         .planet-count {
             margin: 0 0 8px 0;
-            font-size: 11px;
+            font-size: var(--font-size-small);
             color: var(--text-muted);
         }
 
@@ -615,7 +612,7 @@
 
         .system-status {
             margin: 0;
-            font-size: 10px;
+            font-size: var(--font-size-small);
             font-weight: bold;
             padding: 2px 8px;
             border-radius: 999px;
@@ -641,12 +638,12 @@
 
         .empty-cell {
             color: var(--neutral-soft);
-            font-size: 20px;
+            font-size: var(--font-size-large);
         }
 
         .system-error {
             color: var(--accent-danger);
-            font-size: 10px;
+            font-size: var(--font-size-small);
         }
 
         .missing {
@@ -718,7 +715,7 @@
 
         .planet-header h4 {
             margin: 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
             color: var(--text-color);
         }
 
@@ -726,7 +723,7 @@
             display: inline-flex;
             align-items: center;
             gap: 6px;
-            font-size: 10px;
+            font-size: var(--font-size-small);
             font-weight: 600;
             color: var(--text-color);
             text-transform: uppercase;
@@ -788,7 +785,7 @@
         }
 
         .status-badge {
-            font-size: 10px;
+            font-size: var(--font-size-small);
             padding: 4px 12px;
             border-radius: 999px;
             font-weight: 700;
@@ -855,7 +852,7 @@
         .resource-item {
             display: flex;
             justify-content: space-between;
-            font-size: 10px;
+            font-size: var(--font-size-small);
         }
 
         .resource-name {
@@ -885,7 +882,7 @@
 
         .empty-planet-cell {
             color: var(--neutral-soft);
-            font-size: 20px;
+            font-size: var(--font-size-large);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -894,7 +891,7 @@
 
         .planet-error {
             color: var(--accent-danger);
-            font-size: 12px;
+            font-size: var(--font-size-small);
             text-align: center;
             padding: 20px;
         }
@@ -923,7 +920,7 @@
         .planet-state-badge {
             padding: 6px 14px;
             border-radius: 999px;
-            font-size: 11px;
+            font-size: var(--font-size-small);
             font-weight: 700;
             letter-spacing: 0.6px;
             text-transform: uppercase;
@@ -982,7 +979,7 @@
         .info-section h3 {
             margin: 0 0 15px 0;
             color: var(--accent-success);
-            font-size: 16px;
+            font-size: var(--font-size-medium);
         }
 
         .resources-grid,
@@ -1004,7 +1001,7 @@
             padding: 8px 12px;
             background: var(--surface-medium);
             border-radius: 4px;
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .resource-name,
@@ -1057,7 +1054,7 @@
             color: var(--accent-danger);
             text-align: center;
             padding: 40px;
-            font-size: 18px;
+            font-size: var(--font-size-large);
         }
 
         /* Keep info and map separated vertically */
@@ -1125,7 +1122,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 12px;
+            font-size: var(--font-size-small);
             font-weight: bold;
         }
 
@@ -1217,7 +1214,7 @@
             width: 30px;
             height: 30px;
             cursor: pointer;
-            font-size: 18px;
+            font-size: var(--font-size-large);
         }
 
         .detail-section {
@@ -1300,12 +1297,12 @@
         }
 
         .resource-amount {
-            font-size: 20px;
+            font-size: var(--font-size-medium);
             font-weight: bold;
         }
 
         .resource-generation {
-            font-size: 12px;
+            font-size: var(--font-size-small);
             color: var(--accent-success);
         }
 
@@ -1353,13 +1350,13 @@
         }
 
         .stat-label {
-            font-size: 12px;
+            font-size: var(--font-size-small);
             color: var(--text-muted);
             margin-bottom: 5px;
         }
 
         .stat-value {
-            font-size: 16px;
+            font-size: var(--font-size-medium);
             font-weight: bold;
             color: var(--accent-success);
         }
@@ -1508,13 +1505,13 @@
         .building-management h5 {
             color: var(--text-soft);
             margin: 10px 0 8px 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .building-management h6 {
             color: var(--text-muted);
             margin: 5px 0;
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .existing-buildings {
@@ -1554,12 +1551,12 @@
 
         .building-status {
             color: var(--text-muted);
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .building-efficiency {
             color: var(--text-faint);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .build-buildings {
@@ -1599,7 +1596,7 @@
         .building-header h6 {
             margin: 0;
             color: var(--text-soft);
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .build-btn {
@@ -1609,7 +1606,7 @@
             padding: 6px 12px;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 12px;
+            font-size: var(--font-size-small);
             transition: background-color 0.3s;
         }
 
@@ -1640,7 +1637,7 @@
             padding: 4px 8px;
             border-radius: 3px;
             background: var(--surface-soft);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .building-cost .cost-item.affordable {
@@ -1668,7 +1665,7 @@
         .transport-system h5 {
             color: var(--text-soft);
             margin: 10px 0 8px 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .transport-setup {
@@ -1687,7 +1684,7 @@
         .transport-row label {
             min-width: 80px;
             color: var(--text-soft);
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .transport-row select,
@@ -1698,7 +1695,7 @@
             border-radius: 4px;
             background: var(--surface-medium);
             color: var(--text-color);
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .transport-row select:focus,
@@ -1709,7 +1706,7 @@
 
         .available-resources {
             color: var(--text-faint);
-            font-size: 11px;
+            font-size: var(--font-size-small);
             margin-left: 8px;
         }
 
@@ -1730,7 +1727,7 @@
             padding: 4px 8px;
             border-radius: 3px;
             background: var(--surface-soft);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .transport-cost .cost-item.affordable {
@@ -1752,7 +1749,7 @@
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: var(--font-size-small);
             transition: background-color 0.3s;
         }
 
@@ -1784,7 +1781,7 @@
         .prestige-system h5 {
             color: var(--text-soft);
             margin: 10px 0 8px 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .prestige-info {
@@ -1804,13 +1801,13 @@
         .prestige-points .label,
         .galaxy-progress .label {
             color: var(--text-soft);
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .prestige-points .value {
             color: var(--accent-prestige);
             font-weight: bold;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .progress-container {
@@ -1836,7 +1833,7 @@
 
         .progress-text {
             color: var(--text-soft);
-            font-size: 11px;
+            font-size: var(--font-size-small);
             min-width: 40px;
         }
 
@@ -1854,17 +1851,17 @@
 
         .requirement-label {
             color: var(--text-soft);
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .requirement-status.met {
             color: var(--accent-success);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .requirement-status.not-met {
             color: var(--accent-danger);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .prestige-benefits {
@@ -1885,12 +1882,12 @@
         }
 
         .benefit-icon {
-            font-size: 16px;
+            font-size: var(--font-size-medium);
         }
 
         .benefit-text {
             color: var(--text-soft);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .prestige-actions {
@@ -1904,7 +1901,7 @@
             padding: 12px 24px;
             border-radius: 6px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: var(--font-size-small);
             font-weight: bold;
             transition: all 0.3s;
         }
@@ -1931,7 +1928,7 @@
 
         .prestige-hint p {
             color: var(--accent-warning);
-            font-size: 11px;
+            font-size: var(--font-size-small);
             margin: 0;
         }
 
@@ -1985,7 +1982,7 @@
             background: transparent;
             border: none;
             color: var(--text-soft);
-            font-size: 20px;
+            font-size: var(--font-size-large);
             cursor: pointer;
             line-height: 1;
         }
@@ -2011,13 +2008,13 @@
         .terraforming-project h5 {
             color: var(--text-soft);
             margin: 10px 0 8px 0;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .terraforming-project h6 {
             color: var(--text-muted);
             margin: 5px 0;
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .active-projects,
@@ -2072,11 +2069,11 @@
 
         .project-progress {
             color: var(--accent-success);
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .modifier-option .modifier-value {
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .project-details {
@@ -2087,7 +2084,7 @@
 
         .project-target {
             color: var(--text-faint);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .modifier-cost {
@@ -2107,7 +2104,7 @@
             padding: 4px 8px;
             border-radius: 3px;
             background: var(--surface-soft);
-            font-size: 11px;
+            font-size: var(--font-size-small);
         }
 
         .modifier-cost .cost-item.affordable {
@@ -2125,7 +2122,7 @@
             padding: 8px 16px;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 12px;
+            font-size: var(--font-size-small);
             transition: background-color 0.3s;
         }
 
@@ -2149,7 +2146,7 @@
 
         .resource-dashboard h3 {
             margin: 0 0 15px 0;
-            font-size: 1.2em;
+            font-size: var(--font-size-large);
             color: var(--text-color);
         }
 
@@ -2184,7 +2181,7 @@
 
         .resource-header h4 {
             margin: 0;
-            font-size: 0.9em;
+            font-size: var(--font-size-small);
             color: var(--text-color);
         }
 
@@ -2197,12 +2194,12 @@
             color: var(--surface-inverse);
             padding: 2px 6px;
             border-radius: 3px;
-            font-size: 0.7em;
+            font-size: var(--font-size-small);
             font-weight: bold;
         }
 
         .resource-amount {
-            font-size: 1.1em;
+            font-size: var(--font-size-medium);
             font-weight: bold;
             color: var(--accent-info);
         }
@@ -2231,7 +2228,7 @@
         }
 
         .resource-generation {
-            font-size: 0.8em;
+            font-size: var(--font-size-small);
             color: var(--accent-success);
             font-weight: bold;
         }
