--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
 
         .planet-info-grid {
             display: grid;
-            grid-template-columns: repeat(4, minmax(0, 1fr));
+            grid-template-columns: repeat(3, minmax(0, 1fr));
             gap: 20px;
         }
 
@@ -1002,6 +1002,17 @@
             background: var(--surface-medium);
             border-radius: 4px;
             font-size: var(--font-size-small);
+        }
+
+        .building-card {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 6px;
+        }
+
+        .building-title {
+            display: flex;
+            gap: 4px;
         }
 
         .resource-name,
