--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conquer Your Universe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
      <style>
         :root {
             color-scheme: dark;
@@ -18,6 +21,13 @@
             --font-size-small: 0.875rem; /* 14px */
             --font-size-medium: 1rem; /* 16px */
             --font-size-large: 1.5rem; /* 24px */
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Orbitron', 'Trebuchet MS', sans-serif;
+            background-color: var(--orbit-01);
+            color: var(--orbit-03);
         }
     </style>
 </head>
