--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         box-sizing: border-box;
       }
     </style>
+    <link href="/src/style.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
